lustre/ptlrpc/pack_generic.c
@@ -2244,7 +2244,7 @@ void lustre_swab_mdt_rec_reint (struct mdt_rec_reint *rr)
 	__swab32s(&rr->rr_flags);
 	__swab32s(&rr->rr_flags_h);
 	__swab32s(&rr->rr_umask);
-	__swab16s(&rr->rr_mirror_id);
+	__swab16s(&rr->rr_mirror_id_old);
 
 	BUILD_BUG_ON(offsetof(typeof(*rr), rr_padding_4) == 0);
 };
